refactor : Refactor AuthController to Use AuthenticationService
- Moved business logic from AuthController to AuthenticationService for registration, login, and fetching current user details. This enhances code modularity and separation of concerns, making the controller leaner and focused on handling HTTP requests.
- Introduced CustomAlreadyExistsException, CustomAuthenticationException, and CustomNotFoundException to handle specific error scenarios in a more descriptive and consistent manner across the application.
- Utilized constructor-based dependency injection for AuthenticationService in AuthController, aligning with Spring's recommended practices for dependency management.
- Updated Swagger/OpenAPI annotations to accurately reflect API endpoints' behavior, ensuring that documentation remains in sync with the codebase.
- Implemented input validation for RegistrationRequest and LoginRequest to enforce data integrity and prevent common data format issues.
- Added detailed JavaDoc comments to new methods in AuthenticationService, providing clear documentation for the logic behind user registration, login, and retrieval of current user details.

These changes significantly improve the application's architecture by ensuring a clean separation between the web layer and service layer, enhancing error handling, and improving the overall maintainability and testability of the code.