@@ -1,44 +1,31 @@
 package com.openclassrooms.projet3.controller;
 
-import java.util.Collections;
-import java.util.Map;
-
 import com.openclassrooms.projet3.dtos.UserDTO;
-import com.openclassrooms.projet3.repository.DBUserRepository;
+import com.openclassrooms.projet3.excepton.CustomAlreadyExistsException;
+import com.openclassrooms.projet3.excepton.CustomAuthenticationException;
+import com.openclassrooms.projet3.excepton.CustomNotFoundException;
+import com.openclassrooms.projet3.model.LoginRequest;
+import com.openclassrooms.projet3.model.RegistrationRequest;
+import com.openclassrooms.projet3.service.AuthenticationService;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.ExampleObject;
 import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.*;
 
-import com.openclassrooms.projet3.model.DBUser;
-import com.openclassrooms.projet3.model.LoginRequest;
-import com.openclassrooms.projet3.model.RegistrationRequest;
-import com.openclassrooms.projet3.service.DBUserService;
-import com.openclassrooms.projet3.service.JwtService;
+import java.util.Map;
 
 @RestController
 @RequestMapping("/api/auth")
 public class AuthController {
-    @Autowired
-    private DBUserService dbUserService; // Service for user-related database operations
+    private final AuthenticationService authenticationService;
 
-    @Autowired
-    private JwtService jwtService; // Service for JWT token generation
-
-    @Autowired
-    private AuthenticationManager authenticationManager; // Manager for handling authentication process
-
-    @Autowired
-    private DBUserRepository userRepository; // Repository for user data
+    public AuthController(AuthenticationService authenticationService) {
+        this.authenticationService = authenticationService;
+    }
 
     /**
      * Endpoint for user registration.
@@ -60,17 +47,11 @@ public class AuthController {
             })
     public ResponseEntity<?> registerUser(@RequestBody RegistrationRequest registrationRequest) {
         try {
-            DBUser user = dbUserService.registerUser(
-                    registrationRequest.getName(),
-                    registrationRequest.getEmail(),
-                    registrationRequest.getPassword());
-
-            // Generate token for the new user
-            String token = jwtService.generateTokenForUser(user);
-
-            return ResponseEntity.status(HttpStatus.CREATED).body(Map.of("token", token));
+            Map<String, String> tokenResponse = authenticationService.registerUserAndGenerateToken(registrationRequest);
+            return ResponseEntity.status(HttpStatus.CREATED).body(tokenResponse);
+        } catch (CustomAlreadyExistsException e) {
+            return ResponseEntity.badRequest().body(Map.of("error", e.getMessage()));
         } catch (Exception e) {
-            // Handle the exception appropriately
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(Map.of("error", "Could not register the user. Please try again later."));
         }
     }
@@ -88,32 +69,30 @@ public class AuthController {
                     @ApiResponse(responseCode = "200", description = "Login successful",
                             content = @Content(mediaType = "application/json",
                                     examples = @ExampleObject(value = """
-                                                  {
-                                                      "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
-                                                  }
-                                                  """))),
+                                            {
+                                                "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
+                                            }
+                                            """))),
                     @ApiResponse(responseCode = "401", description = "Unauthorized",
                             content = @Content(mediaType = "application/json",
                                     examples = @ExampleObject(value = """
-                                                  {
-                                                      "error": "Invalid username or password"
-                                                  }
-                                                  """)))
+                                            {
+                                                "error": "Invalid username or password"
+                                            }
+                                            """)))
             })
     public ResponseEntity<?> login(@RequestBody LoginRequest loginRequest) {
-        Authentication authentication = authenticationManager.authenticate(
-                new UsernamePasswordAuthenticationToken(
-                        loginRequest.getEmail(),
-                        loginRequest.getPassword()));
-
-        SecurityContextHolder.getContext().setAuthentication(authentication); // Update security context with authentication token
-
-        String jwt = jwtService.generateToken(authentication); // Generate JWT token for the authenticated user
-        return ResponseEntity.ok(Collections.singletonMap("token", jwt));
+        try {
+            Map<String, String> tokenResponse = authenticationService.authenticateAndGenerateToken(loginRequest);
+            return ResponseEntity.ok(tokenResponse);
+        } catch (CustomAuthenticationException e) {
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of("error", e.getMessage()));
+        }
     }
 
     /**
      * Endpoint to retrieve current authenticated user's details.
+     *
      * @return ResponseEntity containing the user's details
      */
     @GetMapping("/me")
@@ -123,35 +102,29 @@ public class AuthController {
                             content = @Content(mediaType = "application/json",
                                     schema = @Schema(implementation = UserDTO.class),
                                     examples = @ExampleObject(value = """
-                                                      {
-                                                          "id": 1,
-                                                          "name": "John Doe",
-                                                          "email": "john.doe@example.com",
-                                                          "createdAt": "2020-01-01",
-                                                          "updatedAt": "2020-01-02"
-                                                      }
-                                                      """))),
+                                            {
+                                                "id": 1,
+                                                "name": "John Doe",
+                                                "email": "john.doe@example.com",
+                                                "createdAt": "2020-01-01",
+                                                "updatedAt": "2020-01-02"
+                                            }
+                                            """))),
                     @ApiResponse(responseCode = "404", description = "User not found",
                             content = @Content(mediaType = "application/json",
                                     examples = @ExampleObject(value = """
-                                                      {
-                                                          "error": "User not found"
-                                                      }
-                                                      """)))
+                                            {
+                                                "error": "User not found"
+                                            }
+                                            """)))
             })
     public ResponseEntity<?> getCurrentUserDetails() {
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        String email = authentication.getName(); // Assuming the username is the email for authenticated user
-
-        DBUser user = userRepository.findByEmail(email).orElseThrow(() -> new RuntimeException("User not found"));
-
-        UserDTO response = new UserDTO(user.getId(),
-                user.getName(),
-                user.getEmail(),
-                user.getCreatedAt(),
-                user.getUpdatedAt());
-
-        return ResponseEntity.ok(response);
+        try {
+            UserDTO userDTO = authenticationService.getCurrentUserDetails();
+            return ResponseEntity.ok(userDTO);
+        } catch (CustomNotFoundException e) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(Map.of("error", e.getMessage()));
+        }
     }
 
 }
